--- a/index.html
+++ b/index.html
@@ -82,13 +82,14 @@
 
     <div class="content">
         <h3> Mon nom est Dramane DIARRA </h3>
-        <p>Je suis developpeur d'application web et mobile certifié par simplon.co à travers Orange Digital Kalanso et ingénieur de formation à la Methode Informatique Appliquée à la Gestion de l'Entreprise .</p>
+        <p>Je suis ingénieur en Methodes Informatiques Appliquées a la Gestion de l'Entreprise, je developpedes applications web et mobile pour repondre aux besoins des clients enfin de contribuer à la gestion informatisé de l'entreprise </p>
+        <!-- <p>Je suis developpeur d'application web et mobile certifié par simplon.co à travers Orange Digital Kalanso et ingénieur de formation à la Methode Informatique Appliquée à la Gestion de l'Entreprise .</p> -->
         <div class="box-container">
             <div class="box">
                 <!-- <p> <span> age : </span> 24 </p> -->
                 <p> <span> genre : </span> Masculin </p>
                 <p> <span> language : </span> Français, Anglais et Bambara </p>
-                <p> <span> Specialité : </span> Développement d'application,Conception de site et Gestion de projet </p>
+                <p> <span> Specialité : </span> Développement d'application web et mobile, administration des bases de données, Conception de site et Gestion de projet </p>
             </div>
             <div class="box">
                 <p> <span> freelance : </span> Disponible </p>
@@ -180,19 +181,19 @@
         <div class="box">
             <i class="fas fa-mobile"></i>
             <h3>Conception des sites internet</h3>
-            <p>Jutilise tres généralement le CMS wordpress pour la conception des sites internets</p>
+            <p>J'utilise très généralement le CMS wordpress pour la conception des sites internets</p>
         </div>
 
         <div class="box">
             <i class="fas fa-bullhorn"></i>
             <h3>Front-end web</h3>
-            <p>Je developpe le front-end des application web avec Angular, HTML/CSS et ceux des applications mobiles avec IONIC</p>
+            <p>Je developpe le front-end des application web avec Angular, Reactjs, VuesJs, HTML/CSS et ceux des applications mobiles avec IONIC</p>
         </div>
 
         <div class="box">
             <i class="fas fa-chart-line"></i>
             <h3>back-end</h3>
-            <p>Je fais le back-end des applications web et mobile avec spring boot</p>
+            <p>Je fais le back-end des applications web et mobile avec spring boot, flask et django</p>
         </div>
 
         <div class="box">
@@ -219,7 +220,7 @@
             <div class="content">
                 <span> 2021 - 2023 </span>
                 <h3>Master</h3>
-                <p>Je fais actuellement le master en MIAGE à l'ESGIC.</p>
+                <p>Je suis detenteur d'un master en MIAGE à l'ESGIC.</p>
             </div>
         </div>
 
@@ -234,8 +235,8 @@
         <div class="box">
             <div class="content">
                 <span> 2021 </span>
-                <h3>Informaticien</h3>
-                <p>Chargé de renseigner la base de donnée RCCM-OHADA.</p>
+                <h3>Adminitrateur de base de donnees</h3>
+                <p>Chargé d'administrer la base de donnée RCCM-OHADA.</p>
             </div>
         </div>
 
@@ -303,7 +304,7 @@
 
         <div class="box">
             <img src="images/img-1.WebP" alt="">
-            <h3> eGESTA </h3>
+            <h3> Humano </h3>
             <!-- <div class="icons">
                 <a href="#" class="fas fa-link"></a>
                 <a href="#" class="fas fa-share"></a>
@@ -323,7 +324,7 @@
 
         <div class="box">
             <img src="images/img-3.WebP" alt="">
-            <h3> Baballa service </h3>
+            <h3> myPark </h3>
             <!-- <div class="icons">
                 <a href="#" class="fas fa-link"></a>
                 <a href="#" class="fas fa-share"></a>
@@ -333,7 +334,7 @@
 
         <div class="box">
             <img src="images/img-4.WebP" alt="">
-            <h3> myPark </h3>
+            <h3> CRA-Afrique </h3>
             <!-- <div class="icons">
                 <a href="#" class="fas fa-link"></a>
                 <a href="#" class="fas fa-share"></a>
@@ -353,7 +354,7 @@
 
         <div class="box">
             <img src="images/img-6.WebP" alt="">
-            <h3> Site vitrine : myPark </h3>
+            <h3> CRA</h3>
             <!-- <div class="icons">
                 <a href="#" class="fas fa-link"></a>
                 <a href="#" class="fas fa-share"></a>
