--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
     </div>
 
     <div class="content">
-        <h3> Mon nom est Dramane DIARRA </h3>
-        <p>Je suis ingénieur en Methodes Informatiques Appliquées a la Gestion de l'Entreprise, je developpedes applications web et mobile pour repondre aux besoins des clients enfin de contribuer à la gestion informatisé de l'entreprise </p>
+        <h3> je suis Dramane DIARRA </h3>
+        <p>Ingénieur en Methodes Informatiques Appliquées a la Gestion de l'Entreprise, je developpedes applications web et mobile pour repondre aux besoins des clients enfin de contribuer à la gestion informatisé de l'entreprise </p>
         <!-- <p>Je suis developpeur d'application web et mobile certifié par simplon.co à travers Orange Digital Kalanso et ingénieur de formation à la Methode Informatique Appliquée à la Gestion de l'Entreprise .</p> -->
         <div class="box-container">
             <div class="box">
