--- a/index.html
+++ b/index.html
@@ -219,6 +219,14 @@
         <div class="box">
             <div class="content">
                 <span> 2021 - 2023 </span>
+                <h3>Développeur chez CRA-Technologie</h3>
+                <p>Employé dans une entreprise tecnologique de la place</p>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="content">
+                <span> 2021 - 2023 </span>
                 <h3>Master</h3>
                 <p>Je suis detenteur d'un master en MIAGE à l'ESGIC.</p>
             </div>
