--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
     <div class="content">
         <h3> je suis Dramane DIARRA </h3>
-        <p>Ingénieur en Methodes Informatiques Appliquées a la Gestion de l'Entreprise, je developpedes applications web et mobile pour repondre aux besoins des clients enfin de contribuer à la gestion informatisé de l'entreprise </p>
+        <p>Ingénieur en Methodes Informatiques Appliquées a la Gestion de l'Entreprise, je developpe des applications web et mobile pour repondre aux besoins des clients enfin de contribuer à la gestion informatisé des entreprises </p>
         <!-- <p>Je suis developpeur d'application web et mobile certifié par simplon.co à travers Orange Digital Kalanso et ingénieur de formation à la Methode Informatique Appliquée à la Gestion de l'Entreprise .</p> -->
         <div class="box-container">
             <div class="box">
