--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a>
         <a href="https://wa.me/22383878125" class="fab fa-whatsapp"></a>
         <a href="https://www.linkedin.com/in/dramane-diarra-a8a82818b/?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3BAofYn4nnTfS7ouqj%2BwC0mQ%3D%3D" class="fab fa-linkedin"></a>
-        <a href="https://myaccount.google.com/u/0/?hl=fr"class="fab fa-youtube"></a>
+        <!-- <a href="https://myaccount.google.com/u/0/?hl=fr"class="fab fa-youtube"></a> -->
     </div>
 
 </header>
@@ -82,7 +82,7 @@
 
     <div class="content">
         <h3> je suis Dramane DIARRA </h3>
-        <p>Ingénieur en Methodes Informatiques Appliquées a la Gestion de l'Entreprise, je developpe des applications web et mobile pour repondre aux besoins des clients enfin de contribuer à la gestion informatisé des entreprises </p>
+        <p>Ingénieur en Methodes Informatiques Appliquées à la Gestion de l'Entreprise, je developpe des applications web et mobile pour repondre aux besoins des clients enfin de contribuer à la gestion informatisé des entreprises </p>
         <!-- <p>Je suis developpeur d'application web et mobile certifié par simplon.co à travers Orange Digital Kalanso et ingénieur de formation à la Methode Informatique Appliquée à la Gestion de l'Entreprise .</p> -->
         <div class="box-container">
             <div class="box">
@@ -99,12 +99,12 @@
             </div>
         </div>
         <a href="images/DIARRA.pdf" class="btn">Telechargez mon CV</a>
-        <a href="tel:+22362546208" class="btn">contactez moi</a>
+        <a href="tel:+22383878125" class="btn">contactez moi</a>
     </div>
 
 </div>
 
-<h1 class="heading"> <span> mes </span> compétences </h1>
+<h1 class="heading"> <span> Mes </span> compétences </h1>
 
 <div class="row-2">
 
@@ -134,7 +134,7 @@
     <div class="box-container">
 
         <div class="box">
-            <h3> > 4+ </h3>
+            <h3> > 5+ </h3>
             <p>ans d'experiences</p>
         </div>
         <div class="box">
@@ -162,7 +162,7 @@
 
 <section class="service" id="service">
 
-<h1 class="heading"> <span> mes </span> services </h1>
+<h1 class="heading"> <span> Mes </span> services </h1>
 
     <div class="box-container">
 
@@ -187,7 +187,7 @@
         <div class="box">
             <i class="fas fa-bullhorn"></i>
             <h3>Front-end web</h3>
-            <p>Je developpe le front-end des application web avec Angular, Reactjs, VuesJs, HTML/CSS et ceux des applications mobiles avec IONIC</p>
+            <p>Je developpe le front-end des application web avec Angular, Reactjs, VuesJs, HTML/CSS et ceux des applications mobiles avec IONIC et flutter</p>
         </div>
 
         <div class="box">
@@ -212,13 +212,13 @@
 
 <section class="experience" id="experience">
 
-    <h1 class="heading"> <span> mes </span> experience </h1>
+    <h1 class="heading"> <span> Mes </span> experience </h1>
 
     <div class="box-container">
 
         <div class="box">
             <div class="content">
-                <span> 2021 - 2023 </span>
+                <span> 2022 - présent </span>
                 <h3>Développeur chez CRA-Technologie</h3>
                 <p>Employé dans une entreprise tecnologique de la place</p>
             </div>
@@ -244,7 +244,7 @@
             <div class="content">
                 <span> 2021 </span>
                 <h3>Adminitrateur de base de donnees</h3>
-                <p>Chargé d'administrer la base de donnée RCCM-OHADA.</p>
+                <p>Chargé d'administrer la base de donnée RCCM-OHADA au tribunal de commerce de Bamako.</p>
             </div>
         </div>
 
@@ -306,7 +306,7 @@
 
 <section class="portfolio" id="portfolio">
 
-    <h1 class="heading"> <span> mes </span> projets </h1>
+    <h1 class="heading"> <span> Mes </span> projets </h1>
 
     <div class="box-container">
 
@@ -386,21 +386,21 @@
 
         <div class="icons">
             <i class="fas fa-envelope"></i>
-            <h3>mon email</h3>
+            <h3>Mon email</h3>
             <p>diarrad536@gmail.com</p>
             <!-- <p>anasbhai@gmail.com</p> -->
         </div>
 
         <div class="icons">
             <i class="fas fa-phone"></i>
-            <h3>mon numero de telephone</h3>
+            <h3>Mon numero de telephone</h3>
             <p>+223 62 54 62 08</p>
             <p>+223 83 87 81 25</p>
         </div>
 
         <div class="icons">
             <i class="fas fa-map-marker-alt"></i>
-            <h3>mon adresse</h3>
+            <h3>Mon adresse</h3>
             <p>Daoudabougou,Rue : 148, Porte : 197, Bamako-MALI</p>
         </div>
 
@@ -430,7 +430,7 @@
 <!-- contact section ends -->
 
 <!-- footer section  -->
-<footer class="footer"> creer par <span> Dramane DIARRA </span> | tout droit reserver! </footer>
+<footer class="footer"> créer par <span> Dramane DIARRA </span> | Tout droit reserver! </footer>
 
 
 <!-- custom js file link  -->
